# serialization

./: .travis.yml  LICENSE  README.md  TODO.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  examples.cpp
src/examples/convert/: CMakeLists.txt  convert.cpp
src/examples/integers/: CMakeLists.txt  integers.cpp  integers.s
src/examples/maps/: CMakeLists.txt  maps.cpp
src/examples/strings/: CMakeLists.txt  strings.cpp
src/examples/structures/: CMakeLists.txt  structures.cpp
src/examples/zip/: CMakeLists.txt  zip.cpp
src/rxn/: reflect.hpp  struct.hpp  struct2.hpp
src/szn/: CMakeLists.txt  array.h  array.hpp  big_endian.h  big_endian.hpp  bool.hpp  bytes.h  bytes.hpp  endianness.hpp  float.h  float.hpp  format.hpp  integer.hpp  intrinsics.hpp  iterator.hpp  little_endian.h  little_endian.hpp  map.hpp  optional.hpp  pair.hpp  pod.hpp  reader.hpp  sink.cpp  sink.h  sink.hpp  source.cpp  source.h  source.hpp  struct.cpp  struct.h  struct.hpp  struct2.hpp  struct3.hpp  structure.hpp  substitute.hpp  to_bytes.hpp  unique_ptr.hpp  util.h  util.hpp  vector.h  (+3 more)
src/test/: CMakeLists.txt  dynamic_message.cpp  reader.cpp  serialization.cpp  structure.cpp  syntax_v2.cpp  syntax_v3.cpp  writer.cpp
tools/: make_inc_guard_uuid.py
